<resources>
    <string name="app_name">BUPTLogin</string>
    <string name="account_hint">请输入账号</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="logout_text">注销</string>
    <string name="remember_me">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="ps">*android 7用户可以打开快速设置面板,添加此应用的快捷开关,方便快速登录</string>
    <string name="dev_hint">开发者</string>
    <string name="developer">Anjiansan</string>
    <string name="about">关于</string>
    <string name="about_me">\u3000\u3000由于刚接触android编程不久,很多方面存在不足,源码已放于 github (https://github.com/Anjiansan/BUPTLogin), 方便交流使用,欢迎改进</string>
</resources>
