<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true" >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="#00b2ff"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true" >

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<android.support.v7.widget.CardView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="15dp"-->
                <!--android:layout_marginLeft="15dp"-->
                <!--android:layout_marginRight="15dp"-->
                <!--android:layout_marginTop="15dp"-->
                <!--app:cardCornerRadius="4dp" >-->

            <LinearLayout
                android:id="@+id/timer_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp">

                <TextView
                    android:id="@+id/timer_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switcher"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:longClickable="false"
                    android:textOff="Off"
                    android:textOn="On"
                    app:showText="true"
                    app:switchTextAppearance="@style/SwitchCompat.Text"
                    app:theme="@style/SwitchCompat.Control" />

            </LinearLayout>

            <EditText
                android:id="@+id/account_text"
                android:background="@drawable/bg_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/timer_layout"
                android:maxLines="1"
                android:textSize="25sp"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:padding="9dp"
                android:hint="@string/account_hint" />

            <EditText
                android:id="@+id/pwd_text"
                android:background="@drawable/bg_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_text"
                android:maxLines="1"
                android:textSize="25sp"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:padding="9dp"
                android:hint="@string/pwd_hint" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pwd_text"
                android:layout_alignStart="@id/pwd_text"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:text="@string/remember_me"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pwd_text"
                android:layout_alignEnd="@id/pwd_text"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"
                android:text="@string/auto_login" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/remember"
                android:textSize="25sp"
                android:background="@drawable/login_btn_shape"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:padding="9dp"
                android:text="@string/login_text" />



            <TextView
                android:id="@+id/android7_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/login_btn"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:textSize="15sp"
                android:text="@string/ps" />

            <TextView
                android:id="@+id/response"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/timer_layout"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/response"
                android:textSize="25sp"
                android:background="@drawable/logout_btn_shape"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:padding="9dp"
                android:text="@string/logout_text" />

            <!--</android.support.v7.widget.CardView>-->

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="#00ddff"
        app:rippleColor="@color/colorPrimary"
        android:src="@drawable/about"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>